include base styles

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -1,4 +1,7 @@
 // Layout
+@import 'base/index'; 
+
+// Layout
 @import 'layout/index'; 
 
 // Modules
@@ -8,7 +11,7 @@
 @import 'states/index';
 
 // Utilities
-@import 'layout/index'; 
+@import 'utilities/index'; 
 
 
 //TEMPORARY PLACEHOLDER STYLES
