--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -1,9 +1,10 @@
 .grid{
     display: grid;
     max-width: 1200px;
+    align:center;
 }
 
 header.grid{
-    grid-template-columns: 1fr 2fr
-    grid-template-rows: 110px;    
+    grid-template-columns: 1fr;
+    grid-template-rows: 110px, 100px;    
 }
