--- a/scss/application.scss
+++ b/scss/application.scss
@@ -35,9 +35,7 @@ h1 {
 p {
     margin-bottom: 1.25em;
 }
-.main-content {
-    margin: 2em auto;
-}
+
 .card {
     padding: 1.5em 1em;
     border: 1px solid #e1e1e1;
@@ -49,13 +47,13 @@ p {
     line-height: 1.25;
 }
 .btn {
-    font-size: 0.85em;
+    font-size: 1.125rem;
     color: #fff;
     font-weight: bold;
     text-transform: uppercase;
-    padding: 0.75em 1.5em;
-    background-color: #278da4;
-    border-radius: 0.35em;
+    padding: 5px 15px;
+    background-color: #4183d7;
+    border-radius: 3px;
     display: inline-block;
 }
 .btn:hover {
@@ -65,3 +63,13 @@ p {
     color: rgba(39, 141, 164, 0.8); 
     font-size: 2.1em;
 }
+
+.site-logo{
+    margin-right: auto;
+    width: 374px;
+    height: 65px;
+    background:url("../images/logo.png") no-repeat center;
+    background-size: cover;
+    text-indent: -999999px;
+}
+
