integrate flex on the header

--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -1,10 +1,23 @@
 .grid{
     display: grid;
     max-width: 1200px;
-    align:center;
 }
 
+//Header Grid
 header.grid{
     grid-template-columns: 1fr;
     grid-template-rows: 110px, 100px;    
 }
+
+.header{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;    
+}
+
+
+
+.header-links{
+    background-color:blue;
+}
+
