--- a/scss/application.scss
+++ b/scss/application.scss
@@ -43,17 +43,16 @@ p {
     line-height: 1.25;
 }
 .btn {
-    font-size: 1.125rem;
-    color: #fff;
-    font-weight: bold;
-    text-transform: uppercase;
     padding: 5px 15px;
     background-color: #4183d7;
     border-radius: 3px;
     display: inline-block;
+    color: #fff;
+    font-size: 1.125rem;    
+    text-transform: uppercase;    
 }
 .btn:hover {
-    background-color: rgba(39, 141, 164, 0.8);  
+    background-image: linear-gradient(rgb(0 0 0/10%) 0 0);
 }
 
 
