centered items in the container

--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -1,6 +1,7 @@
 .container{
     display: grid;
     max-width: 1200px;
+    margin: auto;
 }
 
 //Header Grid
@@ -16,4 +17,8 @@ header.container{
     padding: 20px;
 }
 
+.topbar-links{
+    display:flex;
+    align-items: center;
+}
 
