--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -7,7 +7,7 @@
 //Header Grid
 .header{
     grid-template-columns: 1fr;
-    grid-template-rows: 110px 100px;    
+    grid-template-rows: auto auto;    
 }
 
 .topbar{
@@ -31,10 +31,6 @@
     justify-content: center;
     width: 100vw;
     margin:auto;
+    background-color: #333645;
 }
 
-.nav{
-    display: flex;
-    width: 1200px;    
-    justify-content: center;
-}
