--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -34,3 +34,49 @@
     background-color: #333645;
 }
 
+//Banner Grid
+.banner{
+    display: flex; 
+    
+}
+
+.slideshow{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100vw;
+    height: 550px;
+    margin:auto;
+    padding: 0;
+    background: linear-gradient(270deg,transparent 25%,#000),  
+                url('../images/home-banner.webp')  
+                center/cover 
+                no-repeat;
+}
+
+.slide-text{
+    display:flex;
+    flex-direction: column;
+    justify-content:center;
+    color: #fff;
+    width:1200px;
+    height:550px;
+    
+}
+
+.slide-text h1{
+    font-size: 4rem;
+    line-height: 5rem;
+    margin:0 auto;
+}
+
+.slide-text p{
+    font-size: 1.625rem;
+    line-height: 2.5rem;
+}
+
+.slide-text a i{
+    font-size: 1.25rem;
+    margin: 0 0 0 13px;
+}
+
