removed margin-right on btn style and placed it on topbar-links a style

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -46,7 +46,6 @@ body {
     height: 56px;
     padding: 5px 15px;    
     border-radius: 3px;
-    margin-right:20px;
     color: #fff;
     font-size: 1.125rem;
     text-transform: uppercase;
@@ -68,6 +67,10 @@ body {
 }
 
 .btn-tertiary{
+    background-color: #67809f;
+}
+
+.btn-services{
     background-color: #67809f;
 }
 
