--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -26,6 +26,10 @@
     align-items: center;
 }
 
+.topbar-links a{
+    margin-right: 20px;
+}
+
 .navbar{
     display:flex;
     flex-direction: row;
@@ -76,6 +80,10 @@
     line-height: 2.5rem;
 }
 
+.slide-text a{
+    margin: 0 auto 0 0;
+}
+
 .slide-text a i{
     font-size: 1.25rem;
     margin: 0 0 0 13px;
@@ -102,5 +110,42 @@
     background: #d6d6d6;
     display:block;
     border-radius: 30px;
+}
+
+.services{
+
+}
+
+.service-cards{
+    display:grid;
+    width:100vw;
+    max-width:1200px;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    grid-gap:20px;
+    margin:auto;
+}
+
+.card{
+    display:flex;
+    flex-direction:column;
+    position:relative;
+    top: 0;
+    border:1px solid #ccc;
+    border-radius:15px;
+    cursor: pointer;
+    
+    padding:30px;
+    box-shadow:0 3px 35px rgb(0 0 0 /10%);
+    
+    text-align:center;
+    transition: .5s ease;
+    background-color: #fff;
+}
+.card:hover{
+    top: -10px;
+}
+
+.btn-services{
+    margin:auto auto 0 auto;    
 }
 
