--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -144,7 +144,35 @@
 .card:hover{
     top: -10px;
 }
+.card i{
+    display: flex;
+    width: 65px;
+    height: 65px;
+    margin: auto;
+    align-items: center;
+    justify-content: center;
+    background-color: aqua;
+    border-radius: 40px;    
+    color: #fff;
+    font-size: 1.75rem;
+}
+.card h2{
+    font-size: 1.3rem;
+    position: relative;
+    padding-bottom: 10px;
+    margin: 0 0 11px;
+    font-weight: normal;
+    color: #333645;
+}
 
+.card p{
+    font-size: .8125rem;
+    line-height: 1.375rem;
+    margin-bottom: 13px;
+    font-weight: 400;
+    color: #333645;
+    
+}
 .btn-services{
     margin:auto auto 0 auto;    
 }
