--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,3 +1,127 @@
 * {
-    
+    box-sizing: border-box;
 }
+body {
+    font-family: 'Poppins';
+    font-size: 16px;
+}
+
+a {
+    color: #4183d7;
+    text-decoration: none;
+}
+
+p {
+    margin-bottom: 1.25em;
+}
+
+
+//HEADER
+.site-logo{
+    display:block;
+    width: 100%;
+    height: 72px;
+    background:url("../images/logo.png") no-repeat center / contain;
+}
+
+.srt {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    border: 0;
+    clip: rect(0 0 0 0);    
+    overflow: hidden;     
+}
+
+
+
+.btn{
+    height: auto;
+    padding: 14px 21px;
+    text-transform: uppercase;
+    font-size: 1.125rem;
+    border:0;
+    border-radius: 3px;    
+    align-items: center;
+    color: #fff;
+ 
+}
+
+.btn i{
+    font-size: 1.25rem;
+    margin-right: 13px;
+}
+
+
+.btn-prim{
+    background-color: #333645;
+    color: #fff;    
+    &:hover{
+        background-color: #22242e;
+        color: #fff;
+    }
+}
+
+.btn-sec{
+    background-color: #4183d7;
+    color: #fff;
+    &:hover{
+        background-color: #2a6ec6;
+        color: #fff;
+    }
+}
+.btn-def{
+    background-color: #999aa2;
+    color: #fff;
+    &:hover{
+        background-color: #84858f;
+        color: #fff;
+    }
+}
+
+.btn-tertiary{
+    background-color: #67809f;
+    color: #fff;
+    &:hover{
+        background-color: #566c88;
+        color: #fff;
+    }
+}
+
+.btn-services{
+    background-color: #67809f;
+    color: #fff;
+    &:hover{
+        background-color: #566c88;
+        color: #fff;
+    }
+}
+
+.hamburger {    
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 18px;
+    border-top: solid 3px #fff;
+    border-bottom: solid 3px #fff;
+}
+
+.hamburger:before{
+    display:block;
+    position: absolute;
+    content: '';
+    width: 30px;
+    height: 3px;
+    background: #fff;
+    top: 4px;     
+}
+
+
+
+
+
+
+
+
