declared section colors

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -15,6 +15,14 @@ p {
     margin-bottom: 1.25em;
 }
 
+$software-color: #67809f;
+$support-color: #4183d7;
+$marketing-color: #2ecc71;
+$services-color: #d64541;
+$design-color: #926fb1;
+$security-color: #f62459;
+$training-color: #ce4125;
+
 
 //HEADER
 .site-logo{
