--- a/scss/modules/_services.scss
+++ b/scss/modules/_services.scss
@@ -1,3 +1,13 @@
+$cardColors: (
+  ".card-software": $software-color,
+  ".card-support": $support-color,
+  ".card-marketing": $marketing-color,
+  ".card-services": $services-color,
+  ".card-design": $design-color,
+  ".card-security": $security-color,
+  ".card-training": $training-color
+);
+
 .heading{
     display: flex;
     align-items: center;
@@ -22,32 +32,54 @@
     top: 0;
     border:1px solid #ccc;
     border-radius:15px;
-    cursor: pointer;
-    
+    cursor: pointer;    
     padding:30px;
-    box-shadow:0 3px 35px rgb(0 0 0 /10%);
-    
+    box-shadow:0 3px 35px rgb(0 0 0 /10%);    
     text-align:center;
     transition: .5s ease;
     background-color: #fff;
-
     margin-top:20px;
+
+    & i{
+        display: flex;
+        width: 65px;
+        height: 65px;
+        margin: auto auto 15px auto;
+        align-items: center;
+        justify-content: center;
+        background-color: #6c757d;
+        border-radius: 40px;
+        color: #fff;
+        font-size: 1.75rem;
+    }
 }
+
 .card:hover{
-    top: -10px;
+    top: -10px;    
+    & i, & span.btn{
+        background-color: #fff;        
+    }
+    & h2, & p{
+        color: #fff;
+    }
 }
-.card i{
-    display: flex;
-    width: 65px;
-    height: 65px;
-    margin: auto auto 15px auto;
-    align-items: center;
-    justify-content: center;
-    background-color: #6c757d;
-    border-radius: 40px;
-    color: #fff;
-    font-size: 1.75rem;
+
+
+@each $cardName, $color in $cardColors {
+
+    #{$cardName} {    
+        &:hover, & i{
+        background-color: #{$color};
+        }
+        &:hover{
+            & i, & span.btn{
+                color: #{$color};      
+            }
+        }
+    }
 }
+
+
 .card h2{
     font-size: 1.3rem;
     position: relative;
