--- a/scss/modules/_nav.scss
+++ b/scss/modules/_nav.scss
@@ -1,3 +1,13 @@
+$navColors: (
+  "a.software": $software-color,
+  "a.support": $support-color,
+  "a.marketing": $marketing-color,
+  "a.services": $services-color,
+  "a.design": $design-color,
+  "a.security": $security-color,
+  "a.course": $training-color
+);
+
 .topbar{
     padding: 20px 0;
 }
@@ -61,32 +71,11 @@
     margin-bottom: 10px;
 }
 
-a.software i{
-    color: #67809f;
-}
+@each $itemName, $color in $navColors {
 
-a.support i{
-    color: #4183d7;
-}
-
-a.marketing i{
-    color: #2ecc71;
-}
-
-a.services i{
-    color: #d64541;
-}
-
-a.design i{
-    color: #926fb1;
-}
-
-a.security i{
-    color: #f62459
-}
-
-a.course i{
-    color: #ce4125
+    #{$itemName} i{    
+        color: #{$color};       
+    }
 }
 
 
