--- a/scss/modules/_services.scss
+++ b/scss/modules/_services.scss
@@ -37,7 +37,7 @@ $cardColors: (
     box-shadow:0 3px 35px rgb(0 0 0 /10%);    
     text-align:center;
     transition: .5s ease;
-    background-color: #fff;
+    background-color: $white;
     margin-top:20px;
 
     & i{
@@ -49,7 +49,7 @@ $cardColors: (
         justify-content: center;
         background-color: #6c757d;
         border-radius: 40px;
-        color: #fff;
+        color: $white;
         font-size: 1.75rem;
     }
 }
@@ -57,18 +57,17 @@ $cardColors: (
 .card:hover{
     top: -10px;    
     & i, & span.btn{
-        background-color: #fff;        
+        background-color: $white;        
     }
     & h2, & p{
-        color: #fff;
+        color: $white;
     }
 }
 
 
 @each $cardName, $color in $cardColors {
-
     #{$cardName} {    
-        &:hover, & i{
+        &:hover, & i, & span.btn{
         background-color: #{$color};
         }
         &:hover{
@@ -115,5 +114,8 @@ $cardColors: (
 .item{
     margin:0 50px;
     filter: grayscale(100%);
-}
 
+    &:hover{
+        filter:none;
+    }
+}
