saved the colors to config file

--- a/scss/utilities/_config.scss
+++ b/scss/utilities/_config.scss
@@ -1,1 +1,13 @@
 // Global Config
+$primary-color: #333645;
+
+$white: #ffffff;
+$body-color: #333645;
+
+$software-color: #67809f;
+$support-color: #4183d7;
+$marketing-color: #2ecc71;
+$services-color: #d64541;
+$design-color: #926fb1;
+$security-color: #f62459;
+$training-color: #ce4125;
