--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -47,7 +47,7 @@ p {
     border-radius: 3px;    
     align-items: center;
     color: $white;
- 
+    background-color: #999aa2;
 }
 
 .btn i{
@@ -55,8 +55,12 @@ p {
     margin-right: 13px;
 }
 
+.btn-i-last{
+    margin:0 0 0 15px !important;
+}
 
-.btn-prim{
+
+.btn-prim{ //primary
     background-color: $primary-color;
     color: $white;    
     &:hover{
@@ -65,7 +69,7 @@ p {
     }
 }
 
-.btn-sec{
+.btn-sec{ //secondary
     background-color: #4183d7;
     color: $white;
     &:hover{
@@ -73,7 +77,7 @@ p {
         color: $white;
     }
 }
-.btn-def{
+.btn-def{  //default
     background-color: #999aa2;
     color: $white;
     &:hover{
@@ -82,23 +86,33 @@ p {
     }
 }
 
-.btn-tertiary{
-    background-color: #67809f;
+.btn-software{
+    background-color: $software-color;
     color: $white;
     &:hover{
         background-color: #566c88;
+        color: $white;
+    }
+}
+.btn-trust{
+    background-color: #00b67b;
+    color: $white;
+    &:hover{
+        background-color: #009b69;
         color: $white;
     }
 }
 
-.btn-services{
-    background-color: #67809f;
+.btn-welcome{
+    background-color: #272936;
     color: $white;
     &:hover{
-        background-color: #566c88;
+        background-color: #121318;
         color: $white;
     }
 }
+
+
 
 .hamburger {    
     display: block;
@@ -107,17 +121,18 @@ p {
     height: 18px;
     border-top: solid 3px $white;
     border-bottom: solid 3px $white;
+
+    &:before{
+        display:block;
+        position: absolute;
+        content: '';
+        width: 30px;
+        height: 3px;
+        background: $white;
+        top: 4px;   
+    }
 }
 
-.hamburger:before{
-    display:block;
-    position: absolute;
-    content: '';
-    width: 30px;
-    height: 3px;
-    background: $white;
-    top: 4px;     
-}
 
 
 
