--- a/scss/modules/_about.scss
+++ b/scss/modules/_about.scss
@@ -13,8 +13,24 @@
     letter-spacing: 0.1rem;
 }
 
-.client-quote{
+.client-testimonial{
     font-weight: 600;
     font-size: 1.3rem;
     font-style: italic;
+}
+
+.client-name{
+    font-weight: 600;
+    color: #a3a8ac;
+    font-size: 1.1rem;
+}
+
+.five-star{
+    color: orange;
+    margin-bottom: 25px;
+    font-size: 50px;
+}
+
+.about .btn{
+    margin: 0 15px 15px 0;
 }
