--- a/scss/modules/_services.scss
+++ b/scss/modules/_services.scss
@@ -8,6 +8,13 @@ $cardColors: (
   ".card-training": $training-color
 );
 
+.services{
+    overflow-x:hidden;
+    .container{
+        margin-bottom:50px;
+    }
+}
+
 .heading{
     display: flex;
     align-items: center;
@@ -17,13 +24,23 @@ $cardColors: (
 .heading h2{
     font-size: 2.7rem;
     margin-right:auto;
+    font-weight:bold;
+    color: $primary-color;
 }
 
 .heading h3{
-    font-size: 1.625rem;    
+    font-size: 2.2rem;
+    margin-right:auto;
+    font-weight:bold;
+    color: $primary-color;
 }
 
-.heading h3 a{
+.heading h4{
+    font-size: 1.625rem;
+    font-weight:bold;
+}
+
+.heading h4 a{
     color: #333645;
 }
 
@@ -84,7 +101,7 @@ $cardColors: (
     position: relative;
     margin: 0 0 20px 0;
     font-weight: normal;
-    color: #333645;
+    color: $primary-color;
 }
 
 .card p{
@@ -92,11 +109,13 @@ $cardColors: (
     line-height: 1.375rem;
     margin-bottom: 13px;
     font-weight: 400;
-    color: #333645;
+    color: $primary-color;
     
 }
-.btn-services{
-    margin:auto auto 0 auto;    
+
+.btn-regular{
+    margin:auto auto 0 auto;
+    padding: 10px 15px;
 }
 
 .carousel{
