reordered the colors in the config file

--- a/scss/utilities/_config.scss
+++ b/scss/utilities/_config.scss
@@ -1,8 +1,7 @@
 // Global Config
 $primary-color: #333645;
-
-$white: #ffffff;
 $body-color: #666;
+$bg-color:#ddd;
 
 $software-color: #67809f;
 $support-color: #4183d7;
@@ -11,3 +10,6 @@ $services-color: #d64541;
 $design-color: #926fb1;
 $security-color: #f62459;
 $training-color: #ce4125;
+
+
+$white: #ffffff;
