fixed the about section five-star size and margin

--- a/scss/modules/_about.scss
+++ b/scss/modules/_about.scss
@@ -28,7 +28,11 @@
 .five-star{
     color: orange;
     margin-bottom: 25px;
-    font-size: 50px;
+    font-size: 46px;
+}
+
+.five-star i {
+    margin-right: -10px;
 }
 
 .about .btn{
