--- a/scss/utilities/_config.scss
+++ b/scss/utilities/_config.scss
@@ -11,5 +11,9 @@ $design-color: #926fb1;
 $security-color: #f62459;
 $training-color: #ce4125;
 
+$facebook-color: #3b5998;
+$twitter-color: #00aced;
+$instagram-color: #d93175;
+$linkedin-color: #0077b5;
 
 $white: #ffffff;
