--- a/scss/modules/_news.scss
+++ b/scss/modules/_news.scss
@@ -52,21 +52,24 @@ $cardColors: (
 
 
 .btn-flag{    
-    position:relative;
+    position:absolute;
     z-index: 1;
     margin-left:auto;
-    top: -170px;
-    margin-top: -24px;
+    top: 10px;
+    right:0;
     color: $white;
     font-size: 0.75rem;
     padding: 3px 10px;
-    z-index: 1;
+
     border-radius: 0;
     &:hover{
         color:$white;
         text-decoration:underline;
     }
 }
+
+
+
 
 .author{
     display: table;
