add nav bg colors to config scss

--- a/scss/utilities/_config.scss
+++ b/scss/utilities/_config.scss
@@ -11,6 +11,15 @@ $design-color: #926fb1;
 $security-color: #f62459;
 $training-color: #ce4125;
 
+$software-bg-color: #526781;
+$support-bg-color: #286abd;
+$marketing-bg-color: #25a25a;
+$services-bg-color: #bc2c28;
+$design-bg-color: #79539a;
+$security-bg-color: #de093f;
+$course-bg-color: #a3331d;
+
+
 $facebook-color: #3b5998;
 $twitter-color: #00aced;
 $instagram-color: #d93175;
