--- a/scss/modules/_nav.scss
+++ b/scss/modules/_nav.scss
@@ -97,12 +97,12 @@ $navBgColors: (
     #{$className}:hover:before{
         position: absolute;
         content: '';
-        width: 0;
+        width:  0;
         height: 0;
         border-style: solid;
         border-width: 35px 70px 0;
         border-color: $color transparent transparent;
-        transform: translateX(-64.6px);
+        transform: translateX(-45%);
         bottom:-35px;
         z-index: 1;
     }
@@ -115,7 +115,7 @@ $navBgColors: (
 @each $className, $color in $navBgColors {
     #{$className} + .mega-menu{
         position: absolute;
-        // display: none;
+        display: none;
         background-color: $color;
         width: 100%;
         left: 0;
@@ -124,7 +124,34 @@ $navBgColors: (
 }
 
 .nav__item .mega-menu{
-    display:block;
     color: $white;
+    text-align:left;
+
+    & .sub-menu{
+        margin-top:20px;        
+        padding-left: 0;
+        font-size: 1.2rem;
+        list-style:none;
+
+        & li{
+
+            & a{
+                text-transform: capitalize;                
+                padding: 0.625rem 0.938rem 0.625rem 0;
+
+                &:hover{
+                    text-decoration: underline;
+                }
+            }
+
+            & i{
+                margin-right: 10px;
+            }
+
+          
+        }
+
+
+    }
 }
 
