--- a/scss/utilities/_config.scss
+++ b/scss/utilities/_config.scss
@@ -32,7 +32,7 @@ $breakpoints:(
     "xl": 1400px,
     "lg": 1200px,
     "md":992px,
-    "s": 768px,
+    "sm": 768px,
     "xs": 576px
 );
 
@@ -40,7 +40,7 @@ $navWidths:(
     "xl": 1296,
     "lg": 1116,
     "md":936,
-    "s": 696,
+    "sm": 696,
     "xs": 516
 );
 
