--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -134,6 +134,26 @@ p {
 }
 
 
+.input-field{
+    height: 47px;
+    padding: 5px 15px;
+
+    background-color: $white;
+    background-image: none;
+    border: 1px solid #e5e5e5;
+    border-color: #ccc;
+    border-radius: 2px;
+    box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%);
+
+    font-size: 14px;
+    line-height: 1.42857143;
+
+    color: #555;
+    &:focus{
+        border-color: #5bc0de;
+        outline: 0;
+    }
+}
 
 
 
