--- a/scss/modules/_footer.scss
+++ b/scss/modules/_footer.scss
@@ -1,3 +1,5 @@
+@use "sass:map";
+
 $buttonColors: (
   ".fa-facebook": $facebook-color,
   ".fa-twitter": $twitter-color,
@@ -22,16 +24,20 @@ $buttonColors: (
 
 .footer-menus{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
-    padding: 47px 0 35px 0;
+    padding: 47px 0 0 0;
 }
 
 .service-list, .office-list{
     display:flex;
-    justify-content: space-between;
+    flex-wrap:wrap;
+    justify-content: center;
+    width: 100%;
 }
 .menu{
     width:225px;
+    padding-bottom:35px;
     & h4{
         color: #fff;
         text-transform: uppercase;
@@ -71,5 +77,19 @@ $buttonColors: (
 @each $className, $color in $buttonColors{
     #{$className}:hover{
             background-color: $color;  
+    }
+}
+
+
+@media(min-width:map.get($breakpoints,"md")){
+    .service-list, .office-list{        
+        justify-content: space-evenly;
+    }
+}
+
+@media(min-width:map.get($breakpoints,"xl")){
+    .service-list, .office-list{        
+        justify-content: space-between;
+        width: auto;
     }
 }
