--- a/scss/modules/_banner.scss
+++ b/scss/modules/_banner.scss
@@ -1,3 +1,5 @@
+@use "sass:map";
+
 .slideshow{
     display: flex;
     height: 550px;
@@ -13,27 +15,35 @@
     justify-content:center;
     color: #fff;
     height: 550px;    
+    max-width: 772px;
+    text-align: center;
+    margin: auto;
+
+    & h1{
+        text-align: center;
+        font-size: 2.4rem;
+        font-weight: bold;
+        line-height: 3.2rem;
+    }
+    
+    & p{
+        font-weight: bold;
+        font-size: 1.2rem;
+        line-height: 1.8rem;
+        margin: 2rem 0;
+    }
+    
+    & a{
+        margin: 0 auto;
+    }
+    
+    & a i{
+        font-size: 1.25rem;
+        margin: 0 0 0 13px;
+    }
+    
 }
 
-.slide-text h1{
-    font-size: 4rem;
-    line-height: 5rem;
-    margin:0 auto;
-}
-
-.slide-text p{
-    font-size: 1.625rem;
-    line-height: 2.5rem;
-}
-
-.slide-text a{
-    margin: 0 auto 0 0;
-}
-
-.slide-text a i{
-    font-size: 1.25rem;
-    margin: 0 0 0 13px;
-}
 
 .slideshow-buttons{
     margin-top: -50px;
@@ -42,19 +52,43 @@
 .dots{
     display:flex;
     justify-content:center;
+    padding-left:0;
 }
 
 .dot{
     list-style:none;
+    & span{
+        background-color: hsla(0,0%,100%,.5);
+        width:11px;
+        height:11px;
+        margin: 0 10px;
+        background: #d6d6d6;
+        display:block;
+        border-radius: 30px;
+        cursor:pointer;
+    }
+    
 }
 
-.dot span{
-    background-color: hsla(0,0%,100%,.5);
-    width:11px;
-    height:11px;
-    margin: 0 10px;
-    background: #d6d6d6;
-    display:block;
-    border-radius: 30px;
-    cursor:pointer;
+@media (min-width:map.get($breakpoints,"lg")){
+    .slide-text{
+        max-width:100%;
+        text-align:left;
+        margin:0;
+
+        & h1{
+            text-align:left;
+            font-size: 4rem;
+            line-height: 5rem;
+            margin: 0 auto;
+        }
+        & p{
+            font-size: 1.625rem;
+            line-height: 2.5rem;
+        }
+
+        & a{
+            margin: 0 auto 0 0;
+        }
+    }
 }
