--- a/scss/modules/_about.scss
+++ b/scss/modules/_about.scss
@@ -13,6 +13,13 @@
     letter-spacing: 0.1rem;
 }
 
+.inner p a{
+    color: $white;
+    &:hover{
+        text-decoration:underline;
+    }
+}
+
 .client-testimonial{
     font-weight: 600;
     font-size: 1.3rem;
@@ -37,4 +44,6 @@
 
 .about .btn{
     margin: 0 15px 15px 0;
+    border-radius: 6px;
+    padding: 14px 21px;
 }
