add checkbox color + add input glow effects on focus

--- a/scss/modules/_newsletter.scss
+++ b/scss/modules/_newsletter.scss
@@ -35,6 +35,12 @@
     
 }
 
+.input-field:focus{
+    border-color: #5bc0de;
+    outline: 0;
+    box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%), 0 0 8px rgb(91 192 222 / 60%);
+}
+
 .checkbox-field{
     margin-bottom:30px;
 }
@@ -50,6 +56,9 @@
     margin-right:20px;
 }
 
+.opt-in:checked{
+    accent-color:$primary-color;
+}
 .description{
     font-weight:bold;
 }
