remove the 2 left corners border radius on the header search bar

--- a/scss/modules/_nav.scss
+++ b/scss/modules/_nav.scss
@@ -48,6 +48,7 @@ $navBgColors: (
     margin-left: -66px;
     box-shadow: none;
     padding: 17px 21px;
+    border-radius: 0 3px 3px 0;
 }
 
 .btn-search i, .btn-search-input i, .btn-call i{
