applied a minimum height of 315px to the services cards

--- a/scss/modules/_services.scss
+++ b/scss/modules/_services.scss
@@ -62,6 +62,7 @@ h4.section-link a{
     transition: .5s ease;
     background-color: $white;
     margin-top:20px;
+    min-height: 315px;
 
     & i{
         display: flex;
